--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=newDemo
 spring.datasource.name=MyDB
-spring.datasource.url=jdbc:derby:C:\\Users\\LENOVO\\MyDB;create=true
-spring.datasource.username=root
-spring.datasource.password=admin@123
+spring.datasource.url="db url"
+spring.datasource.username=" username"
+spring.datasource.password="pswd"
 spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
 spring.jpa.hibernate.ddl-auto=update
